# french-news-bot

./: README.md
modules/data_pipeline/: pyproject.toml
modules/data_pipeline/scripts/: embed_news_info_qdrant.py
modules/data_pipeline/src/: transformers.py
modules/feature_pipeline/: pyproject.toml
modules/feature_pipeline/feature_pipeline/: base.py  newsdata_batch.py  qdrant.py
modules/features_pipeline/: Makefile  pyproject.toml  requirements.txt
modules/features_pipeline/features_pipeline/: __init__.py  constants.py  embeddings.py  flow.py  models.py  utils.py
modules/features_pipeline/tools/: run_batch.py  search.py
modules/news_bot/: pyproject.toml  requirements.txt  streamlit.py
modules/news_bot/news_bot/: __init__.py  chains.py  constants.py  embeddings.py  handlers.py  langchain_bot.py  models.py  qdrant.py  template.py  utils.py
modules/news_bot/tools/: bot.py
modules/q_and_a_data_generator/: Makefile  README.md  example_config.py  pyproject.toml  requirements.txt
modules/q_and_a_data_generator/data/: hist_data_from_2024-01-02_to_2024-01-6.json
modules/q_and_a_data_generator/scripts/: embed_news_qdrant.py  generate_training_data.py  train_test_split_and_shuffle.py
modules/q_and_a_data_generator/src/: logger.py  newsdata_api.py  paths.py  vector_db_api.py
modules/q_and_data_generator/data/: training_data.json
modules/q_and_data_generator/scripts/: download_news_from_newsdata.py
modules/q_and_data_generator/src/: newsdata_api_copy.py
modules/training_pipeline/: .beamignore  Makefile  README.md  format_requirements.py  pyproject.toml  requirements.txt
modules/training_pipeline/colab/: requirements.txt
modules/training_pipeline/colab/configs/: dev_inference_config.yaml  dev_training_config.yaml  training_config.yaml
modules/training_pipeline/colab/tools/: inference_run.py  train_run.py
modules/training_pipeline/colab/training_pipeline/: configs.py  constants.py  metrics.py  models.py
modules/training_pipeline/colab/training_pipeline/api/: inference.py  training.py
modules/training_pipeline/colab/training_pipeline/data/: qa.py  utils.py
modules/training_pipeline/colab/training_pipeline/prompt_templates/: prompter.py
modules/training_pipeline/configs/: dev_inference_config.yaml  dev_training_config.yaml  inference_config.yaml  training_config.yaml
modules/training_pipeline/dataset/: testing_data.json  training_data.json
modules/training_pipeline/tools/: inference_run.py  train_run.py
modules/training_pipeline/training_pipeline/: configs.py  constants.py  metrics.py  models.py  utils.py
modules/training_pipeline/training_pipeline/api/: inference.py  training.py
modules/training_pipeline/training_pipeline/data/: qa.py  utils.py
modules/training_pipeline/training_pipeline/prompt_templates/: prompter.py
