[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Angnami <mhtgoudjemi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
torch = "^2.1.2"
transformers = "^4.36.2"
joblib = "^1.3.2"
pydantic = "^2.5.3"
qdrant-client = "^1.7.0"
unstructured = "^0.11.6"
sentencepiece = "^0.1.99"
fire = "^0.5.0"
openai = "^1.6.1"
jinaai = "^0.2.10"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
